CORE de la funcionalidad terminado y testeado
Se reemplazó el uso de la librería pdf-reader por el uso de
pdftext y su salida, se modificó el código para ajustarse a la
salida y limpiarla correctamente

--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 Parser de la nómina de funcionarios del MEC
 
-Requiere la gema pdf-reader
+El parser limpia la salida de 
+ $ pdftotext -layout -l 1 -fixed 2 entrada.pdf salida.txt
 
-	gem install pdf-reader
+y genera un CSV (Realmente separado por punto y coma)
+
+
